RESOLVED FIXED311116
Unified sources build fix
https://bugs.webkit.org/show_bug.cgi?id=311116
Summary Unified sources build fix
Aditya Keerthi
Reported 2026-03-30 10:17:55 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-30 10:18:03 PDT
Aditya Keerthi
Comment 2 2026-03-30 10:21:01 PDT
EWS
Comment 3 2026-03-30 11:18:04 PDT
Committed 310245@main (b8223adf75c9): <https://commits.webkit.org/310245@main> Reviewed commits have been landed. Closing PR #61703 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.